updated image and added ref path

--- a/nextflow.config
+++ b/nextflow.config
@@ -16,6 +16,7 @@ params {
     find_crams_only = false
     // Accept SAMPLE,CRAM list on input
     cram_list = null
+    REF_PATH="/lustre/scratch125/core/sciops_repository/cram_cache/%2s/%2s/%s:/lustre/scratch126/core/sciops_repository/cram_cache/%2s/%2s/%s:URL=http:://sf2-farm-srv1.internal.sanger.ac.uk::8000/%s" 
 }
 
 // Singularity environment parameters
