--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,8 +1,9 @@
 FROM ubuntu:22.04
+
 ARG samtools_version=1.18
 RUN apt-get update && apt-get -y upgrade && \
-	apt-get install -y build-essential wget \
-		libncurses5-dev zlib1g-dev libbz2-dev liblzma-dev libcurl3-dev && \
+	apt-get install -y build-essential wget procps libncurses5-dev zlib1g-dev \
+		libbz2-dev liblzma-dev libcurl3-dev biobambam2 && \
 	apt-get clean && apt-get purge && \
 	rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
 
@@ -15,4 +16,3 @@ RUN wget https://github.com/samtools/samtools/releases/download/${samtools_versi
     make && \
     make install && \
     rm -rf samtools-${samtools_version}
-
