--- a/nextflow.config
+++ b/nextflow.config
@@ -16,6 +16,9 @@ params {
     find_crams_only = false
     // Accept SAMPLE,CRAM list on input
     cram_list = null
+    // By default Samtools checks the reference MD5 sums (@SQ “M5” auxiliary tag) in the directory pointed to by 
+    // $REF_PATH environment variable (if it exists), falling back to querying the European Bioinformatics Institute (EBI)
+    // reference genome server, and further falling back to the @SQ “UR” field if these are not found.
     REF_PATH="/lustre/scratch125/core/sciops_repository/cram_cache/%2s/%2s/%s:/lustre/scratch126/core/sciops_repository/cram_cache/%2s/%2s/%s:URL=http:://sf2-farm-srv1.internal.sanger.ac.uk::8000/%s" 
 }
 
