Add new process to concat fastqs
for ArrayExpress upload

--- a/nextflow.config
+++ b/nextflow.config
@@ -16,6 +16,8 @@ params {
     find_crams_only = false
     // Accept SAMPLE,CRAM list on input
     cram_list = null
+    // Download the FASTQs for ArrayExpress
+    for_upload = false
     // By default Samtools checks the reference MD5 sums (@SQ “M5” auxiliary tag) in the directory pointed to by 
     // $REF_PATH environment variable (if it exists), falling back to querying the European Bioinformatics Institute (EBI)
     // reference genome server, and further falling back to the @SQ “UR” field if these are not found.
