Add ability to upload to ArrayExpress

--- a/nextflow.config
+++ b/nextflow.config
@@ -16,8 +16,14 @@ params {
     find_crams_only = false
     // Accept SAMPLE,CRAM list on input
     cram_list = null
-    // Download the FASTQs for ArrayExpress
-    for_upload = false
+    // ArrayExpress-related inputs
+    // Whether the pipeline will upload to ArrayExpress or not (false/manual/auto)
+    aexpress_upload = 'false'
+    // Username and password received from Annotare
+    aexpress_credentials = 'aexpress,aexpress1'
+    // Address and directory to use in ArrayExpress upload
+    aexpress_address = 'ftp-private-2.ebi.ac.uk'
+    aexpress_directory = null
     // By default Samtools checks the reference MD5 sums (@SQ “M5” auxiliary tag) in the directory pointed to by 
     // $REF_PATH environment variable (if it exists), falling back to querying the European Bioinformatics Institute (EBI)
     // reference genome server, and further falling back to the @SQ “UR” field if these are not found.
