Patch merge fastqs

--- a/nextflow.config
+++ b/nextflow.config
@@ -11,13 +11,15 @@ params {
     index_format = "i*i*"
     // Whether to publish fastqs - other workflows using this may not want to
     publish_fastqs = true
+    // Where to put the output (publish folder path)
+    publish_dir = "results"
     // Advanced CRAM list manipulation
     // Only return the found SAMPLE,CRAM list, e.g. for manual curation/manipulation
     find_crams_only = false
     // Accept SAMPLE,CRAM list on input
     cram_list = null
-    // Download the FASTQs for ArrayExpress
-    for_upload = false
+    // Merge multiple lanes of the same sample into a single sample FASTQ (useful for ArrayExpress/Biostudies)
+    merge = false
     // By default Samtools checks the reference MD5 sums (@SQ “M5” auxiliary tag) in the directory pointed to by 
     // $REF_PATH environment variable (if it exists), falling back to querying the European Bioinformatics Institute (EBI)
     // reference genome server, and further falling back to the @SQ “UR” field if these are not found.
@@ -63,13 +65,14 @@ params {
 }
 
 timeline {
-    enabled = true
+    enabled = false
     file = "${params.tracedir}/${params.timestamp}_timeline.html"
 }
 report {
-    enabled = true
+    enabled = false
     file = "${params.tracedir}/${params.timestamp}_report.html"
 }
 
 // Ensure work directories and removed on successfull pipeline execution
 cleanup = true
+
